[metadata]
name = pyramid_sqlalchemy_utility
version = 0.1
summary = Pyramid sqlalchemy extension
requires-dist =
    sqlalchemy


description-file = README.rst
author = Hadrien David
author_email = hadrien@ectobal.com

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[files]
packages =
    pyramid_sqlalchemy_utility

[noah]
public = True

extra_files =
    setup.py

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_sqlalchemy_utility
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
